<resources>
    <string name="app_name">The Med App</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register Here!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Password reset instructions has been sent.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dental Diagnosis</string>
    <string name="nav_header_subtitle">info@themedapp.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="delete_user">Delete Account</string>
    <string name="prompt_password">Enter Password</string>
    <string name="add_image">Add Image</string>
    <string name="title_activity_display_image">DisplayImage</string>
    <string name="image_information">Image Information</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="dialog_fragment_tag_photo_picker">dialog_fragment_photo_picker</string>
    <string name="ui_profile_toast_save_text">Photo Saved</string>
    <string name="ui_profile_toast_cancel_text">Change canceled</string>
    <string name="ui_button_save_title">Save</string>
    <string name="ui_button_change_title">SnapNow</string>
    <string name="ui_settings_profile_title">User Profile</string>
    <string name="ui_settings_profile_summary">Names, Email, Class, etc</string>
    <string name="ui_profile_photo_title">Profile photo:</string>
    <string name="ui_profile_photo_content_description">Your profile photo:</string>
    <string name="ui_profile_photo_picker_title">"Select profile image"</string>
    <string name="Sendimages">"Send images for diagnosis"</string>
    <string name="add_friends">"Add Friend"</string>
    <string name="decline">"Decline"</string>
    <string-array name="ui_profile_photo_picker_items">
        <item>Take picture from camera</item>
    </string-array>
    <string-array name="imageFor">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>